--- a/FRONTEND/myapp/package.json
+++ b/FRONTEND/myapp/package.json
@@ -12,8 +12,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.6.2",
     "react-select": "^5.10.1",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
